--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-feature android:name="android.hardware.camera" />
 
@@ -15,7 +15,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Finalact"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".ForgotPasswordTeacher"
+            android:exported="false" />
+        <activity
+            android:name=".TeacherLoginActivity"
+            android:exported="false" />
         <activity
             android:name=".QRCodeActivity"
             android:exported="false" />
@@ -23,14 +29,14 @@
             android:name=".QRScanActivity"
             android:exported="false" />
         <activity
-            android:name=".ForgotPassword"
+            android:name=".ForgotPasswordStudent"
             android:exported="false" />
         <activity
             android:name=".StudentLoginActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
