adjust window soft inpu mode for the subject selection activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             android:name=".TeacherLoginActivity"
             android:exported="false" />
         <activity
+            android:name=".SubjectSelectionActivity"
+            android:windowSoftInputMode="adjustPan"
+            android:exported="false" />
+        <activity
             android:name=".QRCodeActivity"
             android:exported="false" />
         <activity
